# gmod-module-base

./: .gitignore  CMakeLists.txt  README.md
example/: BuildProjects.bat  BuildProjects.lua  premake5.lua
example/src/: gm_example.cpp
examples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
examples/MetaTable/: CMakeLists.txt  MetaTable.cpp
include/: CMakeLists.txt
include/GarrysMod/Lua/: Interface.h  LuaBase.h  SourceCompat.h  Types.h
